<resources>
    <string name="app_name">Navadrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_screen">Home Screen</string>
    <string name="menu_map">Menu Map</string>
    <string name="hotel">Hotel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_hotel_fragment">Hello Hotel Fragment</string>
    <string name="subway">Subway</string>
    <string name="subway_screen">Subway Screen</string>
</resources>