<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_home_screen"
            android:icon="@drawable/baseline_add_to_home_screen_24"
            android:title="@string/home_screen">
        </item>

        <item android:title="@string/menu_map">
            <menu>
                <item
                    android:id="@+id/nav_map"
                    android:icon="@drawable/ic_map"
                    android:title="@string/menu_map">
                </item>

                <item
                    android:id="@+id/nav_hotel"
                    android:icon="@drawable/ic_hotel"
                    android:title="@string/hotel">
                </item>

                <item
                    android:id="@+id/nav_subway"
                    android:icon="@drawable/ic_subway"
                    android:title="@string/subway">
                </item>
            </menu>
        </item>
    </group>
</menu>