<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="app.ditodev.navadrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="app.ditodev.navadrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="app.ditodev.navadrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_hotel"
        android:name="app.ditodev.navadrawer.ui.hotel.HotelFragment"
        android:label="Menu Hotel"
        tools:layout="@layout/fragment_hotel">
    </fragment>

    <activity
        android:id="@+id/nav_subway"
        android:name="app.ditodev.navadrawer.ui.subway.SubwayActivity"
        android:label="Menu Subway"
        tools:layout="@layout/activity_subway">
    </activity>
</navigation>